# building-web-browser-from-scratch

./: .gitignore  pyproject.toml  report.html
src/building_web_browser_from_scratch/: main.py
src/building_web_browser_from_scratch/adapters/: __init__.py
src/building_web_browser_from_scratch/adapters/conversors/: __init__.py  convert_request_to_str.py  convert_str_to_request.py  convert_str_to_url.py
src/building_web_browser_from_scratch/adapters/requests/: __init__.py  socket_http_request.py  socket_https_request.py
src/building_web_browser_from_scratch/core/exceptions/: __init__.py
src/building_web_browser_from_scratch/core/exceptions/core/: __init__.py
src/building_web_browser_from_scratch/core/exceptions/core/ports/: __init__.py  exceptions.py
src/building_web_browser_from_scratch/core/models/: __init__.py  dto_url.py  enum.py
src/building_web_browser_from_scratch/core/models/ports/: __init__.py  dto_request.py
src/building_web_browser_from_scratch/core/ports/: __init__.py  conversor_port.py  request_port.py
src/tests/adapters/: test_convert_request_to_str.py  test_convert_str_to_request.py  test_convert_str_to_url.py
src/tests/core/ports/: test_conversor_port.py  test_request_port.py
